--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -9,7 +9,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet">
-    <title>LOGO on TOUR - Therapiebereiche</title>
+    <title>Logopädie: Therapiemöglichkeiten</title>
+
+    <meta name="description" content="Bei Sprechproblemen, Stimmproblemen
+        und Schluckproblemen benötigt es eine erfahrene Logopädin, die Ihre
+        Bedürfnisse individuell erkennt. Einfühlsam und professionell begleite
+        ich Kinder und Erwachsene zu einer klaren Aussprache: Kontaktieren Sie
+        mich!" />
+    <meta name="keywords" content="Therapie Logopädie Kinder, Sprechen
+        Therapie Erwachsene, Logopädie Kinder und Erwachsene" />
+    <meta name="robots" content="index, follow" />
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
@@ -24,9 +33,9 @@
         </section>
     </div>
     <div class="col-md-6 p-lg-3 mx-auto my-3">
-        <h1 class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</h1>
-        <h2>Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</h2>
-        <h3 class="lead font-weight-normal" style="margin-top: 2em">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</h3>
+        <p class="display-3 font-weight-bold" id="title-logo">LOGO on TOUR</p>
+        <p class="lead font-weight-bold" id="title2">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</p>
+        <p class="lead font-weight-normal mb-0" id="title3">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</p>
     </div>
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
@@ -39,16 +48,19 @@
     <div class="collapse navbar-collapse text-center" id="navbarNav">
         <ul class="navbar-nav text-center">
             <li class="nav-item">
-                <a class="nav-link" href="./index.html">LOGO on TOUR / Home</a>
+                <a class="nav-link" href="./index.html">LOGO on TOUR/Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./uebermich.html">Über mich</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche/FAQ</a>
+                <a class="nav-link" href="./schwerpunkte.html">Therapiebereiche</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="./tarife.html">Tarife und Terminvergabe</a>
+                <a class="nav-link" href="./faq.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./tarife.html">Tarife/Terminvergabe</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="./kontakt.html">Kontakt</a>
@@ -60,16 +72,19 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="schwerpunkte">
         <div class="mb-3 pb-3">
-            <h1 class="display-5 mb-4">Therapiebereiche - mobile Logopädie Graz</h1>
+            <h1 class="display-5 mb-4">Logopädie Graz: Therapiebereiche</h1>
             <p class="lead">
-                    In meiner logopädischen Praxis biete ich ein umfassendes Angebot für Sprach-, Sprech- und Schluckstörungen 
-                    sowie Störungen der mimischen Muskulatur an.
+                    In meiner logopädischen Praxis biete ich ein umfassendes Angebot für Therapie gegen Stimm-, Sprach-, Sprech- und
+                    Schluckstörungen sowie Störungen der mimischen Muskulatur an. Kinder können bereits in
+                    jungen Jahren zur logopädischen Therapie zu mir kommen – je früher Störungen behandelt
+                    werden, desto größer sind die Behandlungserfolge. Ebenso behandle ich Erwachsene nach
+                    beispielsweise Schlaganfällen, Unfällen oder degenerativen Erkrankungen bei Sprach- und Sprechstörungen.
             </p>
             <h2 class="display-5 mb-4 mt-5">Therapieangebot in der logopädischen Praxis</h2>
             <div class="lead">
-                <p><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
+                <h3><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
-                    fortschreitenden neurologischen Erkrankungen…):</p>
+                    fortschreitenden neurologischen Erkrankungen…): </h3>
                 <ul>
                     <li>Sprachstörungen (Aphasie und kognitive
                         Dysphasie)</li>
@@ -83,9 +98,15 @@
                     <li>Demenz (und Primär Progressive Aphasie)</li>
                 </ul>
                 <br>
-                <p><b>Schluckstörungen (Dysphagie) und
-                    Trachealkanülenmanagement</b></p>
-                <p><b>Störungen der mimischen Muskulatur:</b></p>
+                <h3><b>Schluckstörungen (Dysphagie) und
+                    Trachealkanülenmanagement</b></h3>
+                <ul>
+                    <li>Schluckreflextriggerung</li>
+                    <li>Schlucktraining und -kräftigung</li>
+                    <li>Kanülenentwöhnung</li>
+                    <li>Stimm- und Schlucktraining bei Patienten mit Trachealkanüle</li>
+                </ul>
+                <h3><b>Störungen der mimischen Muskulatur:</b></h3>
                 <ul>
                     <li>Gesichtslähmungen (Fazialisparesen)</li>
                     <li>Zungenlähmungen (Hypoglossusparesen)</li>
@@ -93,14 +114,14 @@
                         (Myofunktionelle Störungen)</li>
                 </ul>
                 <br>
-                <p><b>Stimmstörungen:</b></p>
+                <h3><b>Stimmstörungen:</b></h3>
                 <ul>
                     <li>Organische (z.B. Stimmlippenknötchen),
                         funktionelle (falsche Nutzung) und psychogene
                         Dysphonien</li>
                 </ul>
                 <br>
-                <p><b>Spracherwerbsstörungen:</b></p>
+                <h3><b>Spracherwerbsstörungen:</b></h3>
                 <ul>
                     <li>Aussprachestörungen (Phonetische und
                         phonologische Störungen)</li>
@@ -110,59 +131,27 @@
                         -verzögerungen</li>
                 </ul>
             </div>
-            <br />
-            <h2 class="display-5 mb-4 mt-5">Mobile logopädische Praxis von Graz bis Kapfenberg</h2>
-            <p class="lead">
-                Um es für Sie und ihre Liebsten so einfach wie möglich zu gestalten, biete ich
-                Ihnen im Rahmen der mobilen Praxis an, zu Ihnen nach Hause zu kommen.
-            </p>
-            <br />
-            <section id="sprachverstaendnis">
-                <img src="img/sprachverstaendnis.jpg" alt="Sprachtherapie Graz">
-            </section>
+            
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="informationen">
         <div class="mb-3 pb-3">
-            <h1 class="display-5  mb-4">Informationen/FAQ</h1>
-            <p class="lead">
-                    <b>Wie arbeiten Logopäden genau?</b> <br />
-                    Die Arbeit eines Logopäden beginnt zumeist nach ärztlicher Zuweisung. 
-                    Nach einem Erstgespräch und einer Diagnostikerhebung kann eine störungsangepasste, 
-                    individuelle Therapie erfolgen. Je nach Störungsbild und Alter des Betroffenen 
-                    unterscheidet sich die Therapie natürlich stark. <br />
-                    Im Unterschied zu Sprachheilpädagogen oder Stimm- und Sprechtrainern, versucht ein Logopäde 
-                    nicht nur die Symptome zu behandeln, sondern die Ursache zu erkennen und zu beseitigen.
-                    <br/><br />
-                    <b>Ab wann ist eine logopädische Therapie notwendig?</b><br />
-                    Bezüglich des Alters kann man hier keine genaue Aussage treffen. Beispielsweise benötigen auch wenige Wochen alte Säuglinge zum Teil eine logopädische Therapie (Fütterstörungen).
-                    Im Bereich der Sprachtherapie bei Kindern gilt: Je früher eine Verzögerung oder eine Störung der Sprachlichen Entwicklung entdeckt und therapiert wird desto schneller kann das Kind den Rückstand aufholen. 
-                    Bei erwachsenen Patienten hängt die Notwendigkeit der Therapie auch oft davon ab, ob der Betroffene etwas ändern möchte oder nicht. 
-                    <br/><br />
-                    <b>Logopädie für Erwachsene: Was wird gemacht?</b><br />
-                    Im Bereich der Erwachsenen Therapie stehen einerseits Menschen mit stimmlichen Beschwerden und andererseits Menschen mit neurologischen Erkrankungen im Vordergrund. Auch hier orientiert sich die Therapie am individuellen Störungsbild. Bei Aussprache-, Schluck oder muskulären Problemen kommt es beispielsweise zum Muskelaufbautraining. Bei Patienten mit sprachlichen Defiziten (z.B. Erfassen sprachlicher Inhalte…) ist es umso wichtiger, den Betroffenen genau an der Stelle abzuholen, an der er steht.
-                    <br/><br />
-                    <b>Wie lange dauert die logopädische Behandlung?</b><br />
-                    Zu dieser Frage kann leider keine pauschale Aussage getroffen werden. Die Anzahl der benötigten Einheiten schwankt je nach Patienten und Störungsbild stark. Selbst wenn zwei Personen exakt dieselben Symptome zeigen, kann die Anzahl der benötigten Einheiten stark voneinander abweichen. Verschrieben werden allerdings meistens 7 – 10 Einheiten, danach muss eine erneute Zuweisung eines Arztes erfolgen.
-                    <br/><br />
-                    <b>Logopädie bei Kindern: Wie läuft das ab?</b><br />
-                    Wie auch im Erwachsenenbereich unterscheidet sich die Therapie je nach Störungsbild. Aber auch in diesem Bereich kann sowohl am Muskelaufbau als auch an den höheren sprachlichen Funktionen (z.B. Erfassen und Umsetzen sprachlicher Inhalte) gearbeitet werden. Je nach Alter des Kindes muss die Therapie mehr oder weniger spielerisch erfolgen.
-                    Wichtig ist es, auch zu bedenken, dass es im Kinderbereich zumeist darum geht, neue Inhalte zu vermitteln. Gerade im neurologischen Bereich geht es vielmehr darum, bereits erlernte Inhalte wieder neu zu entdecken.
-                    <br/><br />
-                    <b>Wie teuer ist die Therapie?</b><br />
-                    Allgemein orientieren sich die Preise für eine Therapie am vorgeschlagenen Stundensatz des Berufsverbandes Logopaedieaustria (Stand Juli 2019: 87,09/Stunde). 
-                    Meine Tarife finden Sie hier: <a href="./tarife.html">Tarife mobile logopädische Praxis Graz und Bruck/Mur</a>
-                    <br/><br />
-                    <b>Wer übernimmt die Therapiekosten?</b><br />
-                    In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden. Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
-                    <br/><br />
-                    <b>Wer verordnet Logopädie?</b><br />
-                    Verordnet wird die Therapie entweder vom Hausarzt oder vom jeweiligen Facharzt (Kinderarzt, Neurologe, HNO-Arzt…). Die Bewilligung der Therapie erfolgt durch die Krankenkasse (beim Arzt nachfragen).
-                    <br/><br />
+            <h2 class="display-5  mb-4">Mobile logopädische Praxis bei Ihnen zu Hause</h2>
+            <p class="lead">Um es für Sie und ihre Liebsten so einfach wie möglich zu gestalten, biete ich Ihnen im Rahmen
+                der mobilen Praxis an, zu Ihnen nach Hause zu kommen.
             </p>
-            <br />
-            <section id="buchstaben">
-                <img src="img/buchstaben.jpg" alt="Sprechtherapie Graz">
+            <p class="lead">Dieses Angebot habe ich speziell für Personen gemacht, für die es zu schwierig ist, in meine
+                Praxis zu kommen oder die (noch) nicht in der Lage sind, meine logopädische Praxis
+                aufzusuchen.
+            </p>
+            <h2 class="display-5  mb-4">Spezielles Angebot meiner mobilen Logopädie</h2>
+            <p class="lead">Damit Sie sich vollkommen auf die Therapie konzentrieren können und keine zusätzlichen
+                Umstände haben, können wir in Ihrem eigenen Heim Erfolge erzielen. Mit einem geringen
+                Aufschlag, dem Kilometergeld, ist dies einfach zu bewerkstelligen.
+                Das Kilometergeld beträgt € 0,42/Kilometer und wird zu den Therapiekosten gerechnet.
+            </p>
+            <section id="sprachverstaendnis">
+                <img src="img/mobile_logopaedin.jpg" alt="Sprachtherapie Graz">
             </section>
         </div>
     </div>
