--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <link href="style.css" rel="stylesheet">
-    <title>Antworten auf häufige Fragen über logopädische Therapie</title>
+    <title>Antworten auf häufige Fragen zur logopädischen Therapie</title>
     <meta name="description" content="Häufige Fragen wie Kosten, Dauer, Häufigkeit, Angebot, Möglichkeiten etc. werden hier
         geklärt. Ebenso können Sie nachlesen, was genau Logopädie ist. Bei Fragen stehe ich, Helena Pernul, ausgebildete Logopädin,
         gerne zur Verfügung: Kontaktieren Sie mich!"/>
@@ -68,8 +68,7 @@
 <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="schwerpunkte">
         <div class="mb-3 pb-3">
-            <h1 class="display-5 mb-4">Antworten auf Fragen über Logopädie</h1>
-            <br />
+            <h1 class="display-5 mb-4">Antworten auf Fragen zur Logopädie</h1>
             <p class="lead">
             <b>Wie arbeiten Logopäden genau?</b> <br />
             Die Arbeit eines Logopäden beginnt zumeist nach ärztlicher Zuweisung. 
@@ -90,31 +89,109 @@
             <b>Wie lange dauert die logopädische Behandlung?</b><br />
             Zu dieser Frage kann leider keine pauschale Aussage getroffen werden. Die Anzahl der benötigten Einheiten schwankt je nach Patienten und Störungsbild stark. Selbst wenn zwei Personen exakt dieselben Symptome zeigen, kann die Anzahl der benötigten Einheiten stark voneinander abweichen. Verschrieben werden allerdings meistens 7 – 10 Einheiten, danach muss eine erneute Zuweisung eines Arztes erfolgen.
             <br/><br />
-        </p>
-        </div>
-    </div>
-    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="informationen">
-        <div class="mb-3 pb-3">
-            <p class="lead">
-                    <b>Logopädie bei Kindern: Wie läuft das ab?</b><br />
-                    Wie auch im Erwachsenenbereich unterscheidet sich die Therapie je nach Störungsbild. Aber auch in diesem Bereich kann sowohl am Muskelaufbau als auch an den höheren sprachlichen Funktionen (z.B. Erfassen und Umsetzen sprachlicher Inhalte) gearbeitet werden. Je nach Alter des Kindes muss die Therapie mehr oder weniger spielerisch erfolgen.
-                    Wichtig ist es, auch zu bedenken, dass es im Kinderbereich zumeist darum geht, neue Inhalte zu vermitteln. Gerade im neurologischen Bereich geht es vielmehr darum, bereits erlernte Inhalte wieder neu zu entdecken.
-                    <br/><br />
-                    <b>Wie teuer ist die Therapie?</b><br />
-                    Allgemein orientieren sich die Preise für eine Therapie am vorgeschlagenen Stundensatz des Berufsverbandes Logopaedieaustria (Stand Juli 2019: 87,09/Stunde). 
-                    Meine Tarife finden Sie hier: <a href="./tarife.html">Tarife mobile logopädische Praxis Graz und Bruck/Mur</a>
-                    <br/><br />
-                    <b>Wer übernimmt die Therapiekosten?</b><br />
-                    In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden. Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
-                    <br/><br />
-                    <b>Wer verordnet Logopädie?</b><br />
-                    Verordnet wird die Therapie entweder vom Hausarzt oder vom jeweiligen Facharzt (Kinderarzt, Neurologe, HNO-Arzt…). Die Bewilligung der Therapie erfolgt durch die Krankenkasse (beim Arzt nachfragen).
-                    <br/><br />
+            <b>Logopädie bei Kindern: Wie läuft das ab?</b><br />
+            Wie auch im Erwachsenenbereich unterscheidet sich die Therapie je nach Störungsbild. Aber auch in diesem Bereich kann sowohl am Muskelaufbau als auch an den höheren sprachlichen Funktionen (z.B. Erfassen und Umsetzen sprachlicher Inhalte) gearbeitet werden. Je nach Alter des Kindes muss die Therapie mehr oder weniger spielerisch erfolgen.
+            Wichtig ist es, auch zu bedenken, dass es im Kinderbereich zumeist darum geht, neue Inhalte zu vermitteln. Gerade im neurologischen Bereich geht es vielmehr darum, bereits erlernte Inhalte wieder neu zu entdecken.
+            <br/><br />
+            <b>Wie teuer ist die Therapie?</b><br />
+            Allgemein orientieren sich die Preise für eine Therapie am vorgeschlagenen Stundensatz des Berufsverbandes Logopaedieaustria (Stand Juli 2019: 87,09/Stunde). 
+            Meine Tarife finden Sie hier: <a href="./tarife.html" id="tariffromfaq">Tarife mobile logopädische Praxis Graz und Bruck/Mur</a>
+            <br/><br />
+            <b>Wer übernimmt die Therapiekosten?</b><br />
+            In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden. Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
+            <br/><br />
+            <b>Wer verordnet Logopädie?</b><br />
+            Verordnet wird die Therapie entweder vom Hausarzt oder vom jeweiligen Facharzt (Kinderarzt, Neurologe, HNO-Arzt…). Die Bewilligung der Therapie erfolgt durch die Krankenkasse (beim Arzt nachfragen).
+            <br/><br />
             </p>
             <br />
             <section id="buchstaben">
                 <img src="img/sprechtherapie_graz.jpg" alt="Sprechtherapie Graz">
             </section>
+        </div>
+    </div>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="informationen">
+        <div class="mb-3 pb-3">
+            <h2 class="display-5 mb-4">Informationen zur logopädischen Therapie</h2>
+            <p class="lead">In der logopädischen Therapie wird auf Störungen des Sprechens,
+                der Atmung, des Schluckens, der Sprache (sowohl schrift- als auch
+                lautsprachlich) und des Hörens eingegangen. Durch eine, auf die
+                individuellen Fähigkeiten und Bedürfnisse angepasste Therapie
+                können je nach Störungsbild uns Krankheitsverlauf größere oder
+                kleinere Verbesserungen erzielt werden.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Ablauf der logopädischen Therapie bei Kindern und Erwachsenen</h2>
+            <p class="lead">Sprechen, verstehen und verstanden werden: Unser Leben besteht aus
+                    Kommunikation. Mit Hilfe unterschiedlichster Behandlungsmethoden
+                    kann sowohl bei Kindern und Jugendlichen als auch bei Erwachsenen
+                    die Sprach-, Stimm-, Sprech- und Schluckfunktion verbessert werden.
+            </p>
+            <p class="lead">Beim Erstgespräch wird die Krankengeschichte erhoben. Auch die
+                    Möglichkeit einer Einsicht in Vorbefunde ist von Vorteil. Je nach Störung
+                    kommt es zu einer kurzen Überprüfung von Fähigkeiten oder
+                    Muskelstrukturen. So kann erfasst werden, ob und wenn, welche
+                    Testungen zur Einstufung des jeweiligen Störungsbildes erforderlich
+                    sind.
+            </p>
+            <p class="lead">Anhand einer störungsspezifischen Testung kann anschließend ein
+                    erster Therapieplan zur Erarbeitung des gesetzten Zieles erstellt
+                    werden.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Dauer und Häufigkeit der Therapie sowie Therapiepausen</h2>
+            <p class="lead">Abhängig von der Belastbarkeit des Patienten (Allgemeinzustand,
+                    Alter…), dem bestehenden Störungsbild (Sprachstörung,
+                    Schluckstörung, Stimmstörung, muskuläre Störung) und dem
+                    Schweregrad der Störung, kann sich sowohl die benötigte
+                    Therapiehäufigkeit als auch die Therapiedauer stark unterscheiden. Zumeist
+                    wird im freiberuflichen Setting eine Einheit pro Woche durchgeführt, bei
+                    Bedarf kann die Frequenz allerdings erhöht werden.
+            </p>
+            <p class="lead">Der zuweisende Arzt verschreibt zunächst meist 7 bis 10
+                    Therapieeinheiten zu 30, 45 oder 60 Minuten. Je nach Bedarf kann mit
+                    einem logopädischen Befund um eine Verlängerung der Therapie oder
+                    der einzelnen Einheiten angesucht werden.
+            </p>
+            <p class="lead">Eine genaue Anzahl der benötigten Therapieeinheiten kann in keinem
+                    Bereich festgelegt werden, da es große individuelle Unterschiede gibt.
+            </p>
+            <p class="lead">Zum Ende eines Therapieblocks muss für eine teilweise Rückerstattung
+                    der Therapiekosten durch die Krankenkasse eine erneute Befundung
+                    erfolgen. Je nach Bedarf muss dazu eine Zwischen- oder eine
+                    Abschlusstestung durchgeführt werden.
+            </p>
+            <p class="lead">Eine längere Therapiepause kann sowohl Vorteile als auch Nachteile
+                    haben. Bei Patienten welche ihr Ziel schon fast erreicht haben, kann
+                    eine Pause in Verbindung mit einem Übungsprogramm beispielsweise
+                    durchaus sinnvoll sein. Auch bei Patienten, welche „therapiemüde“
+                    sind, kann eine Pause Sinn machen, da sie manchmal wieder mehr
+                    Motivation schaffen kann. Bei schwereren Störungen, erst kürzlich
+                    begonnener Therapie oder fortschreitenden Störungen führt eine Pause
+                    allerdings meistens zu einem Rückschritt.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Fallbeispiel einer erfolgreichen Therapie?</h2>
+            <p class="lead">Da jede Therapie individuell auf eine einzelne Person
+                    zugeschnitten werden muss, ist das Erstellen eines Fallbeispiels
+                    schwer möglich bzw. wenig aussagekräftig. Auch bei 2 Personen mit exakt demselben
+                    Störungsbild kann sich sowohl die Therapiegestaltung als auch die
+                    benötigte Einheitenanzahl stark unterscheiden. Grund dafür ist die
+                    Individualität eines jeden Menschen.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Zuweisung, Zahlung, Rückerstattung</h2>
+            <p class="lead">Um nach Beendigung eines Therapieblocks eine Rückerstattung
+                    durch die Krankenkasse zu bekommen, benötigt man sowohl eine
+                    Zuweisung durch einen Arzt (Facharzt oder Hausarzt), als auch eine
+                    chefärztliche Bewilligung für die Therapie.
+                    Zuweisung und Bewilligung müssen nach der Zahlung gemeinsam
+                    mit Honorarnote, Zahlungsbestätigung und logopädischem Befund
+                    bei der Krankenkasse abgegeben werden. Nach dem Einreichen
+                    wird je nach Krankenkasse ein gewisser Kostenbeitrag
+                    zurückerstattet.
+            </p>
+            <p class="lead">
+                    In meiner Praxis ist eine Zahlung per Erlagschein oder
+                    Überweisung möglich.
+            </p>
+            
         </div>
     </div>
 </div>
