--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </p>
             <p class="lead"> Als <a href="uebermich.html" id="uebermichlink2">ausgebildete Logopädin</a>
                 umfasst meine
-                <a href="schwerpunkte.html" id="kontaktlink2">Therapie für Stimm-, Sprach-, Sprech- und Schluckstörungen</a> 
-                folgende Bereiche:
+                <a href="schwerpunkte.html" id="kontaktlink2">Arbeit</a> 
+                folgende Tätigkeitsbereiche:
             </p>
             <ul class="lead">
                 <li>Neurologische Sprach,- und Sprechstörungen</li>
