--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -77,8 +77,9 @@
                     In meiner logopädischen Praxis biete ich ein umfassendes Angebot für Therapie gegen Stimm-, Sprach-, Sprech- und
                     Schluckstörungen sowie Störungen der mimischen Muskulatur an. Kinder können bereits in
                     jungen Jahren zur logopädischen Therapie zu mir kommen – je früher Störungen behandelt
-                    werden, desto größer sind die Behandlungserfolge. Ebenso behandle ich Erwachsene nach
-                    beispielsweise Schlaganfällen, Unfällen oder degenerativen Erkrankungen bei Sprach- und Sprechstörungen.
+                    werden, desto größer ist die Chance auf eine störungsfreie weitere Entwicklung.
+                    Auch Sprach-, Sprech- und Stimmstörungen bei Erwachsenen (zB nach einem Schlaganfall oder
+                    Schädelhirntrauma, bei degenerativen Erkrankungen,...) fallen in meinen Tätigkeitsbereich.
             </p>
             <h2 class="display-5 mb-4 mt-5">Therapieangebot in der logopädischen Praxis</h2>
             <div class="lead">
@@ -140,9 +141,8 @@
             <p class="lead">Um es für Sie und ihre Liebsten so einfach wie möglich zu gestalten, biete ich Ihnen im Rahmen
                 der mobilen Praxis an, zu Ihnen nach Hause zu kommen.
             </p>
-            <p class="lead">Dieses Angebot habe ich speziell für Personen gemacht, für die es zu schwierig ist, in meine
-                Praxis zu kommen oder die (noch) nicht in der Lage sind, meine logopädische Praxis
-                aufzusuchen.
+            <p class="lead">Anstoß zur Gründung der mobilen Praxis war es, auch imobilen Menschen einen Zugang zur 
+                logopädischen Therapie zu geben.
             </p>
             <h2 class="display-5  mb-4">Spezielles Angebot meiner mobilen Logopädie</h2>
             <p class="lead">Damit Sie sich vollkommen auf die Therapie konzentrieren können und keine zusätzlichen
