--- a/uebermich.html
+++ b/uebermich.html
@@ -72,14 +72,14 @@
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="about">
         <div class="mb-3 pb-3">
             <h1 class="display-5 mb-4">Ausgebildete Logopädin in Graz und Umgebung</h1>
-            <p class="lead">Nach meinem erfolgreich abgeschlossenen Studium für Logopädie arbeite ich seit 2017 als
-                    mobile Logopädin für Stimm-, Sprech-, Sprach- und Schlucktherapie.</p>
+            <p class="lead">Nach meinem erfolgreich abgeschlossenen Studium für Logopädie
+                arbeite ich seit 2017 als Logopädin für Stimm-, Sprech-, Sprach- und Schlucktherapie.</p>
             <br />
             <section id="profil">
                 <img src="img/mobile_logopaedin_graz.jpg" alt="Logopäde Graz">
             </section>
             <h2 class="display-5 mb-4 mt-4">Ihre mobile Logopädin aus Graz</h2>
-            <p class="lead">Seit 2017 bin ich vor allem im <a href="schwerpunkte.html" id="tariflink">neurologischen Logopädie-Bereich</a> tätig.
+            <p class="lead">Ich vor allem im <a href="schwerpunkte.html" id="tariflink">neurologisch-logopädischen Bereich</a> tätig.
                 Hier konnte ich in allen oben genannten Bereichen, also der Stimm-, Sprech-, Sprach- 
                 und Schlucktherapie viele Erfahrungen sammeln.
             </p>
