--- a/tarife.html
+++ b/tarife.html
@@ -72,7 +72,7 @@
     <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center text-white overflow-hidden" id="tarif">
         <div class="mb-3 pb-3">
             <h1 class="display-5 mb-4">Logopädie in Graz und Bruck/Mur: Kosten und Tarife</h1>
-            <p class="lead">Meine Tarife und Kosten richten sich nach der zeitlichen Dauer der Stimm-, Sprach-, Sprech- bzw.
+            <p class="lead">Meine Tarife und Kosten richten sich nach der Dauer der Stimm-, Sprach-, Sprech- bzw.
                 Schlucktherapie. Dabei orientieren sich die Tarife  an den Tarifvorschlägen
                 des Verbandes „logopädieaustria“. Dazu biete ich folgende Möglichkeiten:</p>
             <ul class="lead">
@@ -85,20 +85,30 @@
                     Betrages rückerstattet (Zuweisung und Zahlungsbestätigung sowie Befund sind
                     Voraussetzung). Weitere Informationen und Antworten auf mögliche Fragen zu meinem
                     <a href="schwerpunkte.html" id="logoangebot">logopädischen Angebot</a> finden Sie in den
-                    <a href="faq.html" id="faqangebot">FAQ‘s für meine Logopädie</a>.
+                    <a href="faq.html" id="faqangebot">FAQ‘s zu meiner Logopädie</a>.
             </p>
             
             <h2 class="display-5 mb-4 mt-5">Kosten für die mobile logopädische Praxis</h2>
             <p class="lead">Zuzüglich wird ein amtliches Kilometergeld von 0,42 €/km ausgehend 
                 von den Praxen in Graz bzw. Bruck an der Mur verrechnet.</p>
-            <br>
-            
+            <h2 class="display-5 mb-4 mt-5">Kostenbegleichung für die logopädische Therapie</h2>
+            <p class="lead">Eine Zahlung ist per Überweisung oder per Erlagschein möglich.
+                    Die Honorarnote wird in der vorletzten Einheit des Therapieblocks
+                    ausgehändigt. In der letzten Einheit erhalten sie die
+                    Zahlungsbestätigung und den logopädischen Befund.
+            </p>
+            <h2 class="display-5 mb-4 mt-5">Zusatzkosten bei Absage der logopädischen Therapie</h2>
+            <p class="lead">Eine Absage der Therapie sollte am Vortag bis 18:00 erfolgen. Bei
+                    Nichteinhaltung wird ein Drittel des Preises der Therapie
+                    verrechnet, anfallende Fahrtkosten werden zur Gänze verrechnet. 
+                    Selbiges gilt für das Versäumen einer Einheit. Bei
+                    einmaliger kurzfristiger Absage bin ich allerdings kulant.</p>
+
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="termine">
         <div class="mb-3 pb-3">
             <h2 class="display-5  mb-4">Terminvergabe für die logopädische Therapie</h2>
-            <p class="lead">Prinzipiell kann ich sehr schnell Termine vergeben und es gibt kurze Wartezeiten.</p>
             <p class="lead">Die Terminvergabe erfolgt telefonisch unter: <a href="tel:+436604867242">0660/4867242</a></p>
             <br>
             <p class="lead">Termine nach Vereinbarung:</p>
