--- a/uebermich.html
+++ b/uebermich.html
@@ -79,7 +79,7 @@
                 <img src="img/mobile_logopaedin_graz.jpg" alt="Logopäde Graz">
             </section>
             <h2 class="display-5 mb-4 mt-4">Ihre mobile Logopädin aus Graz</h2>
-            <p class="lead">Ich vor allem im <a href="schwerpunkte.html" id="tariflink">neurologisch-logopädischen Bereich</a> tätig.
+            <p class="lead">Ich bin vor allem im <a href="schwerpunkte.html" id="tariflink">neurologisch-logopädischen Bereich</a> tätig.
                 Hier konnte ich in allen oben genannten Bereichen, also der Stimm-, Sprech-, Sprach- 
                 und Schlucktherapie viele Erfahrungen sammeln.
             </p>
