--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
             </ul>
             <br />
             <br />
-            <p class="lead">Ich freue mich auf Sie!</p>
+            <p class="lead">
+                <a href="kontakt.html" id="kontaktlink3">Kontaktieren Sie mich</a>,
+                ich freue mich auf Sie!
+            </p>
             <br />      
             <br />
             <section id="logologo">
