zusätzlicher faq link

--- a/index.html
+++ b/index.html
@@ -138,9 +138,13 @@
             <p class="lead">
                 In meinen logopädischen Praxen in Graz und Bruck/Mur
                 versuche ich eine möglichst vielfältige Therapie anzubieten.
-                Nähere Informationen zu meinen Tätigkeitsbereichen, und Antworten zu häufig
-                gestellten Fragen der Patienten erhalten Sie hier:
+                Nähere Informationen zu meinen Tätigkeitsbereichen erhalten Sie hier:
                 <a href="./schwerpunkte.html">logopädische Therapie</a>
+            </p>
+            <p class="lead">
+                Antworten auf häufig gestellte Fragen und Informationen zur logopädischen 
+                Therapie finden Sie hier:
+                <a href="faqlink">Informationen zur Logopädie</a>
             </p>
             <p class="lead">
                 Sollten Sie Bedarf an einer logopädischen Therapie in Graz, Bruck/Mur oder
