anderer meta text

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href="style.css" rel="stylesheet">
     <title>LOGO ON TOUR - mobile Logopädie Graz </title>
     <meta name="description" content="Ihre Logopädie in Graz für Kinder und Erwachsene: Ich helfe
-        erfolgreich und einfühlsam bei Stimmstörungen, Sprechstörungen, Sprachstörungen und
-        Schluckstörungen. Kontaktieren Sie mich!"" />
+        bei Stimmstörungen, Sprechstörungen, Sprachstörungen und
+        Schluckstörungen. Kontaktieren Sie mich." />
     <meta name="keywords" content="mobile Logopädie Graz, Stimmstörung
         Hilfe Graz, Sprechstörung Hilfe Graz, Schluckstörung Hilfe Graz" />
     <meta name="robots" content="index, follow" />
@@ -144,7 +144,7 @@
             <p class="lead">
                 Antworten auf häufig gestellte Fragen und Informationen zur logopädischen 
                 Therapie finden Sie hier:
-                <a href="faqlink">Informationen zur Logopädie</a>
+                <a href="freqlink">Informationen zur Logopädie</a>
             </p>
             <p class="lead">
                 Sollten Sie Bedarf an einer logopädischen Therapie in Graz, Bruck/Mur oder
