--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
-<body  style="background-color: #fc8f41">
+<body  style="background-color: #fc8f41; max-width: 1600px; left:50%; position: relative; transform: translate(-50%, 0)">
 
 
 
@@ -142,9 +142,14 @@
                 <a href="./schwerpunkte.html">logopädische Therapie</a>
             </p>
             <p class="lead">
+                Informationen über die logopädische Therapie nach einem Schlaganfall,
+                wegen einer schweren Krankheit oder nach einem schweren Unfall finden Sie hier:
+                <a href="./schlaganfall.html">Logopädie nach einem Schlaganfall</a>
+            </p>
+            <p class="lead">
                 Antworten auf häufig gestellte Fragen und Informationen zur logopädischen 
                 Therapie finden Sie hier:
-                <a href="freqlink">Informationen zur Logopädie</a>
+                <a href="./faq.html">Informationen zur Logopädie</a>
             </p>
             <p class="lead">
                 Sollten Sie Bedarf an einer logopädischen Therapie in Graz, Bruck/Mur oder
