--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -22,7 +22,7 @@
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
-<body  style="background-color: #fc8f41">
+<body  style="background-color: #fc8f41; max-width: 1600px; left:50%; position: relative; transform: translate(-50%, 0)">
 
 <div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
     <div class="col-md-3" id="rightheader">
@@ -78,8 +78,9 @@
                     Schluckstörungen sowie Störungen der mimischen Muskulatur an. Kinder können bereits in
                     jungen Jahren zur logopädischen Therapie zu mir kommen – je früher Störungen behandelt
                     werden, desto größer ist die Chance auf eine störungsfreie weitere Entwicklung.
-                    Auch Sprach-, Sprech- und Stimmstörungen bei Erwachsenen (zB nach einem Schlaganfall oder
-                    Schädelhirntrauma, bei degenerativen Erkrankungen,...) fallen in meinen Tätigkeitsbereich.
+                    Auch Sprach-, Sprech- und Stimmstörungen bei Erwachsenen (zB nach einem
+                    <a href="schlaganfall.html" id="schlaglink"> Schlaganfall oder Schädelhirntrauma</a>
+                    , bei degenerativen Erkrankungen,...) fallen in meinen Tätigkeitsbereich.
             </p>
             <h2 class="display-5 mb-4 mt-5">Therapieangebot in der logopädischen Praxis</h2>
             <div class="lead">
@@ -145,7 +146,7 @@
             <p class="lead">Anstoß zur Gründung der mobilen Praxis war es, auch imobilen Menschen einen Zugang zur 
                 logopädischen Therapie zu geben.
             </p>
-            <h2 class="display-5  mb-4">Spezielles Angebot meiner mobilen Logopädie</h2>
+            <h2 class="display-5  mb-4 mt-5">Spezielles Angebot meiner mobilen Logopädie</h2>
             <p class="lead">Damit Sie sich vollkommen auf die Therapie konzentrieren können und keine zusätzlichen
                 Umstände haben, können wir in Ihrem eigenen Heim Erfolge erzielen. Mit einem geringen
                 Aufschlag, dem Kilometergeld, ist dies einfach zu bewerkstelligen.
